--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Oi little shit</h1>
+    <header>
+        <nav>
+            <button>Home</button>
+            <button>Dishes</button>
+            <button>Contact</button>
+        </nav>
+        <div id="content"></div>
+    </header>
 </body>
 </html>
